--- a/2.1/alpine/Dockerfile
+++ b/2.1/alpine/Dockerfile
@@ -1,25 +1,26 @@
 # vim:set ft=dockerfile:
-FROM debian:buster-slim
+FROM alpine:3.11
 
-ENV HAPROXY_VERSION 1.9.15
-ENV HAPROXY_URL https://www.haproxy.org/download/1.9/src/haproxy-1.9.15.tar.gz
-ENV HAPROXY_SHA256 291871c7f0145da14cc7222d2f68d3a0ec1c10734d91fd933226d3a103aebea5
+ENV HAPROXY_VERSION 2.1.4
+ENV HAPROXY_URL https://www.haproxy.org/download/2.1/src/haproxy-2.1.4.tar.gz
+ENV HAPROXY_SHA256 51030ff696d7067162b4d24d354044293aecfbb36d7acc2f840c8d928bfe91cd
 
 # see https://sources.debian.net/src/haproxy/jessie/debian/rules/ for some helpful navigation of the possible "make" arguments
 RUN set -x \
 	\
-	&& savedAptMark="$(apt-mark showmanual)" \
-	&& apt-get update && apt-get install -y --no-install-recommends \
+	&& apk add --no-cache --virtual .build-deps \
 		ca-certificates \
 		gcc \
-		libc6-dev \
-		liblua5.3-dev \
-		libpcre2-dev \
-		libssl-dev \
+		libc-dev \
+		linux-headers \
+		lua5.3-dev \
 		make \
-		wget \
-		zlib1g-dev \
-	&& rm -rf /var/lib/apt/lists/* \
+		openssl \
+		openssl-dev \
+		pcre2-dev \
+		readline-dev \
+		tar \
+		zlib-dev \
 	\
 	&& wget -O haproxy.tar.gz "$HAPROXY_URL" \
 	&& echo "$HAPROXY_SHA256 *haproxy.tar.gz" | sha256sum -c \
@@ -28,17 +29,21 @@ RUN set -x \
 	&& rm haproxy.tar.gz \
 	\
 	&& makeOpts=' \
-		TARGET=linux2628 \
+		TARGET=linux-glibc \
 		USE_GETADDRINFO=1 \
-		USE_LUA=1 LUA_INC=/usr/include/lua5.3 \
+		USE_LUA=1 LUA_INC=/usr/include/lua5.3 LUA_LIB=/usr/lib/lua5.3 \
 		USE_OPENSSL=1 \
 		USE_PCRE2=1 USE_PCRE2_JIT=1 \
 		USE_ZLIB=1 \
+# USE_BACKTRACE is enabled by default on the linux-glibc target, but does not work with musl
+		USE_BACKTRACE= \
 		\
 		EXTRA_OBJS=" \
+# see https://github.com/docker-library/haproxy/issues/94#issuecomment-505673353 for more details about prometheus support
+			contrib/prometheus-exporter/service-prometheus.o \
 		" \
 	' \
-	&& nproc="$(nproc)" \
+	&& nproc="$(getconf _NPROCESSORS_ONLN)" \
 	&& eval "make -C /usr/src/haproxy -j '$nproc' all $makeOpts" \
 	&& eval "make -C /usr/src/haproxy install-bin $makeOpts" \
 	\
@@ -46,16 +51,14 @@ RUN set -x \
 	&& cp -R /usr/src/haproxy/examples/errorfiles /usr/local/etc/haproxy/errors \
 	&& rm -rf /usr/src/haproxy \
 	\
-	&& apt-mark auto '.*' > /dev/null \
-	&& { [ -z "$savedAptMark" ] || apt-mark manual $savedAptMark; } \
-	&& find /usr/local -type f -executable -exec ldd '{}' ';' \
-		| awk '/=>/ { print $(NF-1) }' \
-		| sort -u \
-		| xargs -r dpkg-query --search \
-		| cut -d: -f1 \
-		| sort -u \
-		| xargs -r apt-mark manual \
-	&& apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false
+	&& runDeps="$( \
+		scanelf --needed --nobanner --format '%n#p' --recursive /usr/local \
+			| tr ',' '\n' \
+			| sort -u \
+			| awk 'system("[ -e /usr/local/lib/" $1 " ]") == 0 { next } { print "so:" $1 }' \
+	)" \
+	&& apk add --no-network --virtual .haproxy-rundeps $runDeps \
+	&& apk del --no-network .build-deps
 
 # https://www.haproxy.org/download/1.8/doc/management.txt
 # "4. Stopping and restarting HAProxy"
